build_err_ui10.txt
mapforge
+- run exe tlc_map_forge
   +- install
      +- install tlc_map_forge
         +- compile exe tlc_map_forge Debug native 1 errors
src/map_forge.zig:141:9: error: local variable is never mutated
    var font = nk.nk_font_atlas_add_default(atlas, 13.0, null);
        ^~~~
src/map_forge.zig:141:9: note: consider using 'const'
error: the following command failed with 1 compilation errors:
/home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/bin/zig build-exe -I/usr/include/SDL2 -D_REENTRANT -L/usr/lib/x86_64-linux-gnu -lSDL2 -cflags -std=c99 -pedantic -- /home/glauber/arquivos/projetos/code-labs/the-last-coffe-brak-at-doom/src/nuklear.c -ODebug -I /home/glauber/arquivos/projetos/code-labs/the-last-coffe-brak-at-doom/src -Mroot=/home/glauber/arquivos/projetos/code-labs/the-last-coffe-brak-at-doom/src/map_forge.zig -lc --cache-dir .zig-cache --global-cache-dir /home/glauber/.cache/zig --name tlc_map_forge --zig-lib-dir /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig/ --listen=-

Build Summary: 8/13 steps succeeded; 1 failed
mapforge transitive failure
+- run exe tlc_map_forge transitive failure
   +- compile exe tlc_map_forge Debug native 1 errors
   +- install transitive failure
      +- install tlc_map_forge transitive failure
         +- compile exe tlc_map_forge Debug native (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/821ebdc9f1c47c63e5bf54ab642e7c71/build /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/bin/zig /home/linuxbrew/.linuxbrew/Cellar/zig/0.15.2_1/lib/zig /home/glauber/arquivos/projetos/code-labs/the-last-coffe-brak-at-doom .zig-cache /home/glauber/.cache/zig --seed 0xb0ac1ec2 -Zb74f2d818a33155d mapforge
